# EzEngine

./: .gitignore  README.md
engine/: .gitignore  CMakeLists.txt  conanfile.txt  config.hpp
engine/App/: app.cmake
engine/App/Scene/Private/: App.cpp  Scene.cpp  SceneManager.cpp
engine/App/Scene/Public/: App.hpp  Scene.hpp  SceneManager.hpp
engine/Audio/: audio.cmake
engine/Audio/Private/Device/: AudioDevice.cpp
engine/Audio/Private/Initialization/: Initialization.cpp
engine/Audio/Private/Stream/: AudioStream.cpp  AudioStreamInput.cpp  AudioStreamOutput.cpp
engine/Audio/Public/Device/: AudioDevice.hpp  AudioInfo.hpp
engine/Audio/Public/Initialization/: Initialization.hpp
engine/Audio/Public/Stream/: AudioStream.hpp  AudioStreamInput.hpp  AudioStreamOutput.hpp
engine/Core/: assertions.hpp  core.cmake
engine/Core/Events/Private/: AudioEvent.cpp  Event.cpp  KeyboardEvent.cpp
engine/Core/Events/Public/: AudioEvent.hpp  Event.hpp  KeyBoardEvent.hpp  MouseEvent.hpp  Variant.hpp
engine/Core/Exception/Private/: ThreadPool_is_not_available.cpp  base.cpp  division_by_zero.cpp  fileIOFailed.cpp  manager_not_found.cpp  (+3 more)
engine/Core/Utility/: InstanceLimits.hpp  Singleton.hpp
engine/GameDemo/: CMakeLists.txt
engine/GameDemo/Private/: PlayerComponent.cpp  RotaryComponent.cpp  main.cpp
engine/GameDemo/Public/: PlayerComponent.hpp  RotaryComponent.hpp
engine/GameDemo/assets/: LRMonoPhase4.xml
engine/GameObjects/: gameobjects.cmake
engine/GameObjects/Private/: AudioComponent.cpp  BaseComponent.cpp  PrimitiveComponent.cpp  SceneComponent.cpp
engine/GameObjects/Public/: AudioComponent.hpp  BaseComponent.hpp  PrimitiveComponent.hpp  SceneComponent.hpp
engine/Physics/: physics.cmake
engine/Physics/Private/: Collision.cpp
engine/Physics/Public/: Collision.hpp
engine/ResourceManager/: resourcemanager.cmake
engine/ResourceManager/Private/: ResourceManager.cpp  ResourcePipeline.cpp  ResourceRegistry.cpp
engine/ResourceManager/Public/: ResourceManager.hpp  ResourcePipeline.hpp  ResourceRegistry.hpp
engine/__tests__/: CMakeLists.txt  CMakeLists.txt.in
engine/__tests__/App/: app.cmake
engine/__tests__/Audio/: Audio.cmake  Audio.cpp  Audiocopy.cpp
engine/__tests__/Core/: core.cmake
engine/__tests__/ENDGAME/: SmallGame.cpp  endgame.cmake
engine/__tests__/ResourceManager/: ResourceManager.cpp  ResourceRegistry.cpp  resourcemanager.cmake  scull.xml  test.xml  testobj.xml
engine/cmake/: fmt.in  libs.cmake
(+119 files in other folders)
